
syntax = "proto3";

// The realtime protocol for the template match engine.
package proto;

option go_package = "github.com/nk-nigeria/cgp-common/proto";

message CommonApiLeaderBoardRecord {
  string game_code = 1;
  string user_id = 2;
  int64 score = 3;
}
